connects sankey through the new react bridge

--- a/frontend/html/tool.ejs
+++ b/frontend/html/tool.ejs
@@ -3,6 +3,7 @@
   <div class="js-sankey-tooltip c-info-tooltip"></div>
   <div class="loading-wrapper">
     <div class="l-tool">
+      <div id="js-react-vanilla-bridge-container"></div>
 
       <nav class="tool-nav" id="js-tool-nav-react"></nav>
 
